# 3rd_imdc_EMAp_SillasModel

./: .gitignore  README.md  final_report.md  pyproject.toml
data/submissions/chikungunya_city/xgb_quantile/final/: 1716109_TO_-_PARAISO_DO_TOCANTINS.csv  1721000_TO_-_PALMAS.csv  2211001_PI_-_TERESINA.csv  2931350_BA_-_TEIXEIRA_DE_FREITAS.csv  3119401_MG_-_CORONEL_FABRICIANO.csv  3143302_MG_-_MONTES_CLAROS.csv  4104808_PR_-_CASCAVEL.csv  4219507_SC_-_XANXERE.csv  5102637_MT_-_CAMPO_NOVO_DO_PARECIS.csv  5103403_MT_-_CUIABA.csv
data/submissions/chikungunya_city/xgb_quantile/validation_1/: 1716109_TO_-_PARAISO_DO_TOCANTINS.csv  1721000_TO_-_PALMAS.csv  2211001_PI_-_TERESINA.csv  2931350_BA_-_TEIXEIRA_DE_FREITAS.csv  3119401_MG_-_CORONEL_FABRICIANO.csv  3143302_MG_-_MONTES_CLAROS.csv  4104808_PR_-_CASCAVEL.csv  4219507_SC_-_XANXERE.csv  5102637_MT_-_CAMPO_NOVO_DO_PARECIS.csv  5103403_MT_-_CUIABA.csv
data/submissions/chikungunya_city/xgb_quantile/validation_2/: 1716109_TO_-_PARAISO_DO_TOCANTINS.csv  1721000_TO_-_PALMAS.csv  2211001_PI_-_TERESINA.csv  2931350_BA_-_TEIXEIRA_DE_FREITAS.csv  3119401_MG_-_CORONEL_FABRICIANO.csv  3143302_MG_-_MONTES_CLAROS.csv  4104808_PR_-_CASCAVEL.csv  4219507_SC_-_XANXERE.csv  5102637_MT_-_CAMPO_NOVO_DO_PARECIS.csv  (+1 more)
plot_submissions/: plot_index.csv
scripts/: fetch_external_predictions.py  plot_final_validation_models.py
src/: __init__.py  backtest.py  build_dataset.py  config.py  diagnostics.py  download.py  features.py  forecast.py  mapbiomas.py  metrics.py  models.py  plots.py  spatial.py  submission.py  utils.py  validate_raw_data.py
(+355 files in other folders)
