[project]
name = "3rd-imdc-emap-sillasmodel"
version = "0.1.0"
description = "Leakage-safe weekly dengue forecasts for the 3rd IMDC"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "epiweeks>=2.3.0",
  "geopandas>=0.14.0",
  "libpysal>=4.10.0",
  "matplotlib>=3.8.0",
  "esda>=2.5.0",
  "mosqlient>=1.5.2",
  "numpy>=1.26.0",
  "pandas>=2.1.0",
  "pyarrow>=15.0.0",
  "rasterio>=1.3.0",
  "scikit-learn>=1.4.0",
  "xgboost>=2.0.0",
  "python-dotenv>=1.2.2",
  "statsmodels>=0.14.6",
  "jupyter>=1.1.1",
  "seaborn>=0.13.2",
]

[project.optional-dependencies]
dev = ["optuna>=4.0.0", "ruff>=0.4.0", "statsmodels>=0.14.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
